--- a/src/views/Exchange/index.css
+++ b/src/views/Exchange/index.css
@@ -160,6 +160,7 @@
 @media screen and (min-width: 769px) {
   #app > .page > main.exchange {
     display: flex;
+    position: relative;
   }
 
   .positions {
